--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@supabase/supabase-js": "^1.28.5",
     "framer-motion": "^5.5.4",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
