--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@supabase/supabase-js": "^1.28.5",
-    "framer-motion": "^5.5.4",
+    "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
+    "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
