--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@googlemaps/react-wrapper": "^1.1.18",
     "@supabase/supabase-js": "^1.28.5",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
@@ -23,6 +24,7 @@
     "swr": "^1.1.2-beta.0"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.47.2",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
