--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/react-wrapper": "^1.1.18",
     "@supabase/supabase-js": "^1.28.5",
     "framer-motion": "^5.5.5",
+    "mapbox-gl": "^2.6.1",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "normalize.css": "^8.0.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.47.2",
+    "@types/mapbox-gl": "^2.6.0",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
