--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
+    "@deck.gl/core": "^8.6.5",
+    "@deck.gl/layers": "^8.6.5",
+    "@deck.gl/mapbox": "^8.6.5",
+    "@deck.gl/react": "^8.6.5",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@googlemaps/react-wrapper": "^1.1.18",
+    "@loaders.gl/core": "^3.1.4",
     "@supabase/supabase-js": "^1.28.5",
     "framer-motion": "^5.5.5",
     "mapbox-gl": "^2.6.1",
@@ -22,9 +27,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-map-gl": "^6.1.18",
     "swr": "^1.1.2-beta.0"
   },
   "devDependencies": {
+    "@danmarshall/deckgl-typings": "^4.9.13",
     "@types/google.maps": "^3.47.2",
     "@types/mapbox-gl": "^2.6.0",
     "@types/node": "17.0.0",
