--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@googlemaps/react-wrapper": "^1.1.18",
     "@loaders.gl/core": "^3.1.4",
     "@supabase/supabase-js": "^1.28.5",
-    "framer-motion": "^5.5.5",
+    "framer-motion": "^6.3.6",
     "mapbox-gl": "^2.6.1",
     "next": "12.0.7",
-    "next-pwa": "^5.4.4",
+    "next-pwa": "^5.5.2",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -35,6 +36,7 @@
     "@types/google.maps": "^3.47.2",
     "@types/mapbox-gl": "^2.6.0",
     "@types/node": "17.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
