--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@supabase/supabase-js": "^1.28.5",
     "framer-motion": "^6.3.6",
     "mapbox-gl": "^2.6.1",
-    "next": "12.0.7",
-    "next-pwa": "^5.5.2",
+    "next": "^12.1.6",
+    "next-pwa": "^5.5.4",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-map-gl": "^6.1.18",
-    "swr": "^1.1.2-beta.0"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@danmarshall/deckgl-typings": "^4.9.13",
@@ -37,7 +37,8 @@
     "@types/mapbox-gl": "^2.6.0",
     "@types/node": "17.0.0",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "17.0.37",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
