--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-map-gl": "^6.1.18",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "wordcloud": "^1.2.2"
   },
   "devDependencies": {
     "@danmarshall/deckgl-typings": "^4.9.13",
@@ -39,6 +40,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/wordcloud": "^1.1.3",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
