--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon-cloud": "^4.1.3",
     "react-icons": "^4.3.1",
     "react-map-gl": "^6.1.18",
     "swr": "^1.3.0",
